app/assets/stylesheets/people.css.scss
.people_page {
  width: 75%;
  margin: auto;
  text-align: center;
  margin-top: 5%;
}

#person_picture {
  display: none;
}

.people {
  display: inline-block;
  width: 33%;
  float: left;
  margin-bottom: 5%;
}

.title#people, {
  font-size: 1em;
  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
}

#new_person_picture .button {
  padding: 1%;
  color: white;
  background-color: purple;
  border-radius: 3px;
  width: 98%;
  margin: 1% auto;
  -webkit-transition: all 1s ease-in;
  -moz-transition: all 1s ease-in;
  -o-transition: all 1s ease-in;
  -ms-transition:all 1s ease-in;
  transition: all 1s ease-in;
  margin-top: 2%;
}
.new_person_button {
  padding: 1%;
  background-color: purple;
  border-radius: 3px;
  width: 30%;
  margin: 5% auto;
  -webkit-transition: all 1s ease-in;
  -moz-transition: all 1s ease-in;
  -o-transition: all 1s ease-in;
  -ms-transition:all 1s ease-in;
  transition: all 1s ease-in;
  text-align: center;
  clear: both;
}

#submit_new_person {
  border: none;
  background-color: transparent;
  color: #fff;
  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
  font-size: 1.2em;
}

#edit_icon_people {
  margin-right: 5%;
  width: 7%;
}

#edit_icon_people_show {
  width: 4%;
}

#people_icons, #person_icons {
  display: inline-block;
  text-align: center;
  margin: auto;
  width: 100%;
}

#person_image {
  width: 50%;
}

.picture_show {
  width: 70%;
  margin: auto;
}

.person {
  width: 75%;
  margin: auto;
  text-align: center;
}

.name {
  color: #fff;
  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
  font-size: 1em;
  margin: 5% auto 2%;
}

#left_arrow img {
  width: 3%;
  margin: auto;
  margin-top: 10%;
}


.edit_person,
.new_person {
  width: 35%;
  margin: 0 auto;

  form {
    width: 100%;
    text-align: center;

    #new_person_title {
      width: 100%;
      margin-top: 8%;
      padding: 0;
    }

    #person_name {
      width: 99%;
      height: 35px;
      border: none;
      text-align: center;
      border-radius: 3px;
      font-size: 1.6em;
    }
  }

  .actions.person {
    padding: 1%;
    background-color: purple;
    border-radius: 3px;
    width: 98%;
    margin: 1% auto;
    -webkit-transition: all 1s ease-in;
    -moz-transition: all 1s ease-in;
    -o-transition: all 1s ease-in;
    -ms-transition:all 1s ease-in;
    transition: all 1s ease-in;
    margin-top: 2%;
  }

    #person_submit {
      border: none;
      background-color: transparent;
      color: #fff;
      font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
      font-size: 1.2em;
    }
  }

  .options {
    text-align: center;
    padding-top: 2%;

    .button#people_back {
      width: 10%;
      height: 25%;
      border-radius: 3px;
      background: #A9A9A9;
      padding: 1%;
      margin: 0 auto;
      margin-bottom: 2%;
    }
  }

  #edit_person_picture {
    margin: 3%;
    width: 50%;
  }


#new_person_picture {
  width: 65%;
  margin: auto;
}

#person_picture {
  width: 81%;
}

